--- a/pages/home/styles/globalStyles.css
+++ b/pages/home/styles/globalStyles.css
@@ -12,14 +12,14 @@ img {
 }
 
 :root {
-  --color-brand-1: #6741D9;
-  --color-brand-2: #5F3DC4;
-  --color-grey-1:  #212529;
-  --color-grey-2:  #343a40;
-  --color-grey-3:  #dee2e6;
-  --color-grey-4:  #e9ecef;
-  --color-grey-5:  #f1f3f5;
-  --color-grey-6:  #ffffff;
+  --color-brand-1: #6741d9;
+  --color-brand-2: #5f3dc4;
+  --color-grey-1: #212529;
+  --color-grey-2: #343a40;
+  --color-grey-3: #dee2e6;
+  --color-grey-4: #e9ecef;
+  --color-grey-5: #f1f3f5;
+  --color-grey-6: #ffffff;
   --radius-default: 0.5rem;
 
   --title-1: 3rem;
@@ -28,9 +28,9 @@ img {
   --title-4: 1.375rem;
   --title-5: 1.125rem;
 
-  --text-1:  1.125rem;
-  --text-2:  1rem;
-  --text-3:  0.875rem;
+  --text-1: 1.125rem;
+  --text-2: 1rem;
+  --text-3: 0.875rem;
 }
 
 body {
@@ -45,11 +45,11 @@ body {
   padding-right: 1rem;
 }
 
-@media(max-width: 991px){
+@media (max-width: 991px) {
   :root {
     --title-1: calc(3rem / 1.2);
     --title-2: calc(2.5rem / 1.2);
     --title-3: calc(2rem / 1.2);
-    --text-1:  calc(1.125rem / 1.2);
+    --text-1: calc(1.125rem / 1.2);
   }
 }
