--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
   margin-bottom: 20px;
 }
 .ul_vagas {
-  margin-left: 40px;
+  padding:0px 40px;
   margin-top: 20px;
   margin-bottom: 20px;
   list-style: none;
@@ -129,9 +129,9 @@ main {
 }
 @media (max-width: 680px) {
   .botao_candidatar {
-    width: 60%;
-    max-width: 60%;
-    margin-left: 30px;
+    width: 100%;
+    max-width: 100%;
+    margin-left:2px;
     margin-top: 20px;
   }
 }
